update all the file

--- a/PHP_Project/Jenkinsfile
+++ b/PHP_Project/Jenkinsfile
@@ -1,10 +1,9 @@
-
 pipeline {
    agent none
   environment{
-      BUILD_SERVER_IP='ec2-user@172.31.13.17'
-       IMAGE_NAME='devopstrainer/java-mvn-privaterepos:php$BUILD_NUMBER'
-       DEPLOY_SERVER_IP='ec2-user@172.31.12.133'
+      BUILD_SERVER_IP='ec2-user@172.31.41.202'
+       IMAGE_NAME='venugopaleega09/venuprivaterepo:php$BUILD_NUMBER'
+       DEPLOY_SERVER_IP='ec2-user@172.31.44.242'
    }
     stages {          
         stage('BUILD DOCKERIMAGE AND PUSH TO DOCKERHUB') {
@@ -24,20 +23,20 @@ pipeline {
             }
         }
         }
-      stage('DEPLOY DOCKER CONTAINER USING DOCKER_COMPOSE'){
-           agent any
-           steps{
-               script{
-                    sshagent(['slave2']){
-                         withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'PASSWORD', usernameVariable: 'USERNAME')]) {
-                         sh "scp -o StrictHostKeyChecking=no -r testconfig ${DEPLOY_SERVER_IP}:/home/ec2-user"
-                         sh "ssh -o StrictHostKeyChecking=no ${DEPLOY_SERVER_IP} 'bash ~/testconfig/docker-script.sh'"
-                         sh "ssh ${DEPLOY_SERVER_IP} sudo docker login -u $USERNAME -p $PASSWORD"
-                         sh "ssh ${DEPLOY_SERVER_IP} bash /home/ec2-user/testconfig/docker-compose-script.sh ${IMAGE_NAME}"
-                         }
-                    }
-               }
-           }
+    //   stage('DEPLOY DOCKER CONTAINER USING DOCKER_COMPOSE'){
+    //        agent any
+    //        steps{
+    //            script{
+    //                 sshagent(['slave2']){
+    //                      withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'PASSWORD', usernameVariable: 'USERNAME')]) {
+    //                      sh "scp -o StrictHostKeyChecking=no -r testconfig ${DEPLOY_SERVER_IP}:/home/ec2-user"
+    //                      sh "ssh -o StrictHostKeyChecking=no ${DEPLOY_SERVER_IP} 'bash ~/testconfig/docker-script.sh'"
+    //                      sh "ssh ${DEPLOY_SERVER_IP} sudo docker login -u $USERNAME -p $PASSWORD"
+    //                      sh "ssh ${DEPLOY_SERVER_IP} bash /home/ec2-user/testconfig/docker-compose-script.sh ${IMAGE_NAME}"
+    //                      }
+    //                 }
+    //            }
+    //        }
        }
     }
 }
