update the jenkinfile

--- a/testconfig/docker-compose.yml
+++ b/testconfig/docker-compose.yml
@@ -9,7 +9,7 @@ services:
      depends_on:
      - mysql
    mysql:
-     image: venugopaleega09/venuprivaterepo:mysql
+     image: venugopaleega09/mysql:v1
      volumes:
      - db_data:/var/lib/mysql
      environment:
